project(kcp)
aux_source_directory(. SRC_LIST)
list(REMOVE_ITEM SRC_LIST ./test.cpp)
message(STATUS ${SRC_LIST})
include_directories(../lua/src)
ADD_DEFINITIONS(-DLUA_BUILD_AS_DLL)
add_library(kcp SHARED ${SRC_LIST})
set_target_properties(kcp PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ../../xluatest)
set_target_properties(kcp PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ../../xluatest)
target_link_libraries(kcp ../../xluatest/liblua)
target_link_libraries(kcp legacy_stdio_definitions)
ADD_DEPENDENCIES(kcp lua)