project(liblua)
aux_source_directory(. SRC_LIST)
list(REMOVE_ITEM SRC_LIST ./luac.c ./lua.c)
message(STATUS ${SRC_LIST})
ADD_DEFINITIONS(-DLUA_BUILD_AS_DLL)
include_directories(.)
set(LIBRARY_OUTPUT_PATH ../../bin)
add_library(liblua SHARED ${SRC_LIST})

project(lua)
set(SRC_LIST ./lua.c)
message(STATUS ${SRC_LIST})
include_directories(.)
set(EXECUTABLE_OUTPUT_PATH ../../bin)
add_executable(lua ${SRC_LIST})
link_directories(../../bin/Debug)
target_link_libraries(lua liblua)
