project(liblua)
file(GLOB LIBLUA_H *.h)
aux_source_directory(. LIBLUA_C)
list(REMOVE_ITEM LIBLUA_C ./luac.c ./lua.c)
message(STATUS ${LIBLUA_C})
ADD_DEFINITIONS(-DLUA_BUILD_AS_DLL)
include_directories(.)
set(LIBRARY_OUTPUT_PATH ../../bin)
add_library(liblua SHARED ${LIBLUA_H} ${LIBLUA_C})

project(lua)
set(LUA_C ./lua.c)
message(STATUS ${LUA_C})
include_directories(.)
set(EXECUTABLE_OUTPUT_PATH ../../bin)
add_executable(lua ${LUA_C})
link_directories(../../bin/Debug)
target_link_libraries(lua liblua)
